# django-collab-messages

./: .gitignore  setup.cfg
collab_messages/: __init__.py  account_urls.py  apps.py  models.py  signals.py  urls.py  util.py  views.py
collab_messages/migrations/: 0001_initial.py
collab_messages/templates/collab_messages/: base.html  inbox.html  message_create.html  thread_confirm_delete.html  thread_detail.html
collab_messages/templates/collab_messages/includes/: accessible_users_select.html
collab_messages/templatetags/: collab_messages_tags.py
